--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="city text-right order-lg-3">
           <p class="city__name text-crop">Санкт-Петербургу и ЛО</p>
-          <div class="city__btn"><a href="#">Сменить город</a></div>
+          <div class="city__btn"><a href="#" class="open-modal-city">Сменить город</a></div>
         </div>
         
         <!-- Logo -->
